--- a/app/predict/test_predict.ipynb
+++ b/app/predict/test_predict.ipynb
@@ -400,6 +400,63 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import des modules nécessaires\n",
+    "import os.path\n",
+    "import yaml\n",
+    "\n",
+    "# SCRIPT_DIR = os.path.dirname(os.path.abspath(__file__))\n",
+    "SCRIPT_DIR = os.path.realpath(os.path.join('D:\\Documents\\Datascientest\\MLOps\\projet\\MLOps_ChampiPy\\\\app\\predict'))\n",
+    "\n",
+    "model = 'VGG16'\n",
+    "stage = 'Production'\n",
+    "mlruns_fld = os.path.realpath(os.path.join(SCRIPT_DIR, 'mlruns', 'models', model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file:///D:/Documents/Datascientest/MLOps/projet/MLOps_ChampiPy/app/predict/mlruns/622132443712942447/166a60d1081443c29f9126b71b87d581/artifacts/model\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for path, subdirs, files in os.walk(mlruns_fld):\n",
+    "    for name in files:    \n",
+    "        fullname = os.path.join(path, name)\n",
+    "        \n",
+    "        with open(fullname, 'r') as file:\n",
+    "            infos = yaml.safe_load(file)\n",
+    "            try:\n",
+    "                if infos['current_stage'] == stage:\n",
+    "                    model_fld = infos['source']\n",
+    "                    print(model_fld)\n",
+    "                    break\n",
+    "            except KeyError:\n",
+    "                # YAML dans model ne contient pas 'current_stage'\n",
+    "                pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -423,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
