--- a/app/predict/test_predict.ipynb
+++ b/app/predict/test_predict.ipynb
@@ -480,6 +480,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-05-07 15:48:28.254000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "time = 1683467308254\n",
+    "print(datetime.fromtimestamp(time/1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
